--- a/bkmonitor/locale/en/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/en/LC_MESSAGES/django.po
@@ -1662,6 +1662,15 @@ msgstr "The metric item corresponding to the event"
 msgid "分类"
 msgstr "Category"
 
+msgid "数据上报"
+msgstr "Data Report"
+
+msgid "数据状态"
+msgstr "Data Status"
+
+msgid "自定义标签"
+msgstr "Custom Label"
+
 msgid "事件所属的数据分层，如 \"application\", \"os\", \"others\""
 msgstr "Event Scenario"
 
@@ -2053,6 +2062,9 @@ msgstr "Exception"
 
 msgid "无数据"
 msgstr "No Data"
+
+msgid "有数据"
+msgstr "Data"
 
 msgid "集群名称"
 msgstr "Cluster Name"
@@ -5888,6 +5900,9 @@ msgstr "Web Page"
 msgid "远程调用"
 msgstr "Remote Call"
 
+msgid "其他语言"
+msgstr "Other Language"
+
 msgid "高级(Advances)"
 msgstr "Advanced"
 
@@ -7916,6 +7931,9 @@ msgstr "Operation"
 msgid "调用链"
 msgstr "Trace"
 
+msgid "性能分析"
+msgstr "Profiling"
+
 msgid "统计"
 msgstr "Statistics"
 
@@ -8319,6 +8337,15 @@ msgstr "Interface"
 msgid "调用类型"
 msgstr "Invocation Type"
 
+msgid "调用服务"
+msgstr "Invoked Service"
+
+msgid "查看告警"
+msgstr "View Alarm"
+
+msgid "查看指标"
+msgstr "View Metrics"
+
 msgid "平均响应时间"
 msgstr "Average response time"
 
@@ -8437,6 +8464,18 @@ msgstr "View the alarm"
 msgid "查看相关指标"
 msgstr "View relevant metrics"
 
+msgid "接口下钻"
+msgstr "API drilldown"
+
+msgid "查看三方应用"
+msgstr "View Third Party Application"
+
+msgid "服务概览"
+msgstr "Service Overview"
+
+msgid "资源拓扑"
+msgstr "Resource Topology"
+
 msgid "展开服务"
 msgstr "Expand Service"
 
@@ -8451,6 +8490,24 @@ msgstr "View related application"
 
 msgid "关系调用"
 msgstr "Relationship Call"
+
+msgid "主调总量"
+msgstr "The total number of Main Tone"
+
+msgid "主调平均耗时"
+msgstr "The average time is Main Tone"
+
+msgid "主调错误量"
+msgstr "The amount of error to be Main Tone"
+
+msgid "被调总量"
+msgstr "The total number of Turned"
+
+msgid "被调平均耗时"
+msgstr "The average time is Turned"
+
+msgid "被调错误量"
+msgstr "The amount of error to be Turned"
 
 msgid "Span列表请求失败: {e.data.get('message')}"
 msgstr "Failed to retrieve the Span list: {e.data.get('message')}"
