--- a/bkmonitor/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/zh_Hans/LC_MESSAGES/django.po
@@ -12502,3 +12502,24 @@ msgstr "JSON解析错误：{msg}"
 
 #~ msgid "sum_without_time(内存 requests)/sum_without_time(kube_node_status_allocatable_memory_bytes)-(count_without_time(kube_node_status_allocatable_memory_bytes)-1)/count_without_time(kube_node_status_allocatable_memory_bytes)"
 #~ msgstr "sum_without_time(内存 requests)/sum_without_time(kube_node_status_allocatable_memory_bytes)-(count_without_time(kube_node_status_allocatable_memory_bytes)-1)/count_without_time(kube_node_status_allocatable_memory_bytes)"
+
+msgid "告警事件"
+msgstr "告警事件"
+
+msgid "服务调用总数Top5"
+msgstr "服务调用总数 Top5"
+
+msgid "服务错误次数Top5"
+msgstr "服务错误次数 Top5"
+
+msgid "服务平均响应耗时Top5"
+msgstr "服务平均响应耗时 Top5"
+
+msgid "服务接口调用总数Top5"
+msgstr "服务接口调用总数 Top5"
+
+msgid "服务接口错误率Top5"
+msgstr "服务接口错误率 Top5"
+
+msgid "服务接口平均耗时Top5"
+msgstr "服务接口平均耗时 Top5"
