--- a/bkmonitor/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/zh_Hans/LC_MESSAGES/django.po
@@ -12523,3 +12523,18 @@ msgstr "服务接口错误率 Top5"
 
 msgid "服务接口平均耗时Top5"
 msgstr "服务接口平均耗时 Top5"
+
+msgid "告警事件"
+msgstr "告警事件"
+
+msgid "总数量"
+msgstr "总数量"
+
+msgid "请求统计"
+msgstr "请求统计"
+
+msgid "错误详情"
+msgstr "错误详情"
+
+msgid "错误趋势"
+msgstr "错误趋势"
