feat:补充 profiling 趋势图表的国际化

--- a/bkmonitor/locale/en/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/en/LC_MESSAGES/django.po
@@ -12317,3 +12317,9 @@ msgstr "Host list"
 
 msgid "总趋势"
 msgstr "Total trend"
+
+msgid "查询项"
+msgstr "Query item"
+
+msgid "对比项"
+msgstr "Compare item"
