feat: 补充删除相关操作

--- a/bkmonitor/locale/en/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/en/LC_MESSAGES/django.po
@@ -12152,3 +12152,6 @@ msgstr "JSON Parsing Error: {msg}"
 
 #~ msgid "存在非法的策略ID, {}"
 #~ msgstr "There is an illegal strategy ID, {}"
+
+msgid "related_bk_biz_id 不能重复"
+msgstr "related_bk_biz_id can not repeat"
