--- a/bkmonitor/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/zh_Hans/LC_MESSAGES/django.po
@@ -12507,16 +12507,7 @@ msgstr "JSON解析错误：{msg}"
 msgid "总数"
 msgstr "总数"
 
-msgid "主调"
-msgstr "主调"
-
-msgid "被调"
-msgstr "被调"
-
 # Incident metrics constants translations
-msgid "请求数"
-msgstr "请求数"
-
 msgid "请求总数"
 msgstr "请求总数"
 
@@ -12529,15 +12520,6 @@ msgstr "被调请求数"
 msgid "错误请求数"
 msgstr "错误请求数"
 
-msgid "错误率"
-msgstr "错误率"
-
-msgid "耗时"
-msgstr "耗时"
-
-msgid "平均耗时"
-msgstr "平均耗时"
-
 msgid "99% 耗时"
 msgstr "99% 耗时"
 
@@ -12547,17 +12529,11 @@ msgstr "95% 耗时"
 msgid "50% 耗时"
 msgstr "50% 耗时"
 
-msgid "CPU使用量"
-msgstr "CPU使用量"
-
 msgid "CPU request使用率"
 msgstr "CPU request使用率"
 
 msgid "CPU limit使用率"
 msgstr "CPU limit使用率"
-
-msgid "内存使用量"
-msgstr "内存使用量"
 
 msgid "内存 request使用率"
 msgstr "内存 request使用率"
@@ -12571,25 +12547,8 @@ msgstr "网络入带宽"
 msgid "网络出带宽"
 msgstr "网络出带宽"
 
-msgid "CPU使用率"
-msgstr "CPU使用率"
-
 msgid "CPU五分钟平均负载"
 msgstr "CPU五分钟平均负载"
-
-msgid "物理内存空闲量"
-msgstr "物理内存空闲量"
-
-msgid "网卡入流量比特速率"
-msgstr "网卡入流量比特速率"
-
-msgid "网卡出流量比特速率"
-msgstr "网卡出流量比特速率"
-
-msgid "磁盘空间使用率"
-msgstr "磁盘空间使用率"
-
-
 
 msgid "告警事件"
 msgstr "告警事件"
@@ -12704,3 +12663,78 @@ msgstr "查询项"
 
 msgid "对比项"
 msgstr "对比项"
+
+msgid "告警模板"
+msgstr "告警模板"
+
+msgid "服务组件"
+msgstr "服务组件"
+
+msgid "调用分析"
+msgstr "调用分析"
+
+msgid "事件等级"
+msgstr "事件等级"
+
+msgid "事件来源"
+msgstr "事件来源"
+
+msgid "用户环境"
+msgstr "用户环境"
+
+msgid "主调 Service"
+msgstr "主调 Service"
+
+msgid "主调接口"
+msgstr "主调接口"
+
+msgid "主调 IP"
+msgstr "主调 IP"
+
+msgid "主调容器"
+msgstr "主调容器"
+
+msgid "主调 SetID"
+msgstr "主调 SetID"
+
+msgid "主调流量组"
+msgstr "主调流量组"
+
+msgid "被调服务"
+msgstr "被调服务"
+
+msgid "被调 Service"
+msgstr "被调 Service"
+
+msgid "被调接口"
+msgstr "被调接口"
+
+msgid "被调 IP"
+msgstr "被调 IP"
+
+msgid "被调容器"
+msgstr "被调容器"
+
+msgid "被调 SetID"
+msgstr "被调 SetID"
+
+msgid "返回码"
+msgstr "返回码"
+
+msgid "地域"
+msgstr "地域"
+
+msgid "金丝雀"
+msgstr "金丝雀"
+
+msgid "预留字段1"
+msgstr "预留字段1"
+
+msgid "预留字段2"
+msgstr "预留字段2"
+
+msgid "预留字段3"
+msgstr "预留字段3"
+
+msgid "主调服务"
+msgstr "主调服务"
