feat: 补充 metric_statistics 表头的国际化

--- a/bkmonitor/locale/en/LC_MESSAGES/django.po
+++ b/bkmonitor/locale/en/LC_MESSAGES/django.po
@@ -12398,3 +12398,9 @@ msgstr "Reserved Field 3"
 
 msgid "主调服务"
 msgstr "Caller Server"
+
+msgid "调用数"
+msgstr "Call number"
+
+msgid "缩略图"
+msgstr "Thumbnail"
